# moodle4python

./: README.md
moodle-python-api/: .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml
moodle-python-api/.github/workflows/: ci.yml
moodle-python-api/alembic/: env.py
moodle-python-api/app/auth/: router.py  schemas.py
moodle-python-api/app/courses/: router.py
moodle-python-api/app/users/: router.py
moodle-python-api/core/: config.py  logging.py
moodle-python-api/core/db/: base.py  session.py
moodle-python-api/core/events/: bus.py
moodle-python-api/core/security/: capabilities.py  roles.py
moodle-python-api/tests/: conftest.py  test_health.py
